Update the landing page

--- a/app/views/products/helpers/_integration_points.html.erb
+++ b/app/views/products/helpers/_integration_points.html.erb
@@ -25,6 +25,20 @@
         </div>
         <div class = "row">
           <div class="span1 integration_icon" >
+            <span style="font-size: 50px;"><i class = "icon-bitbucket"></i></span>
+          </div>
+          <div class =  "span6">
+            <h5 class="integration_header"> Bitbucket </h5>
+            <p class="integration_desc">
+              Monitor your Bitbucket repositories to get periodical
+              email notifications about outdated dependencies in your
+              projects.<br/>
+              <a href='<%= auth_bitbucket_signin_url %>'>Login via Bitbucket</a>
+            </p>
+          </div>
+        </div>
+        <div class = "row">
+          <div class="span1 integration_icon" >
             <span class = "icon_www"></span>
           </div>
           <div class = "span6">
