--- a/app/views/products/helpers/_support_for_packagemanagers.html.erb
+++ b/app/views/products/helpers/_support_for_packagemanagers.html.erb
@@ -34,9 +34,9 @@
 
           <div class = "span5 package_manager" style="margin-left: 0px;" >
             <div class="pull-left package_managers_icon">
-              <a href="/PHP"><span class = "icon_php on" ></span></a>
+              <a href="/javascript"><span class = "icon_javascript on"></span></a>
             </div>
-            composer.json files from packagist.org.
+            Bower.json files for JavaScript.
           </div>
 
           <div class = "span6 package_manager" style="margin-left: 0px;" >
@@ -44,6 +44,20 @@
               <a href="/python"><span class = "icon_python on"></span></a>
             </div>
             PIP requirement.txt and setup.py files.
+          </div>
+
+          <div class = "span5 package_manager" style="margin-left: 0px;" >
+            <div class="pull-left package_managers_icon">
+              <a href="/PHP"><span class = "icon_php on" ></span></a>
+            </div>
+            composer.json files from packagist.org.
+          </div>
+
+          <div class = "span6 package_manager" style="margin-left: 0px;" >
+            <div class="pull-left package_managers_icon">
+              <a href="/Ojbective-C"><span class = "icon_objective-c on"></span></a>
+            </div>
+            CocoaPods .podspec files for Objective-C, iPhone developers.
           </div>
 
           <div class = "span5 package_manager" style="margin-left: 0px;" >
