--- a/app/views/page/imprint.html.erb
+++ b/app/views/page/imprint.html.erb
@@ -4,26 +4,12 @@
   <%= image_tag 'worldmap_sf_b.jpg', {:width => 650}  %>
 </div>
 <div class = "row">
-  <div class="offset1 span4" >
-    <address>
-      <strong>VersionEye</strong><br/>
-      <br/>
-      524 Union Street, #131<br/>
-      North Beach<br/>
-      San Francisco, CA 94133<br/>
-      USA<br/>
-      <br/>
-      E-Mail: contact [at] versioneye.com<br />
-      Tel: +1-415-967-3497<br />
-      <br />
-    </address>
-  </div>
-  <div class="offset1 span4">
+  <div class="offset1 span4" style="margin-top: 50px;">
     <address>
       <strong>VersionEye GmbH</strong><br/>
       <br />
-      Invalidenstraße 50/51<br/>
-      10557 Berlin<br/>
+      Rudolf-Breitscheid-Straße 187<br/>
+      14482 Potsdam<br/>
       Germany<br/>
       <br/>
       E-Mail: contact [at] versioneye.com<br />
@@ -33,15 +19,6 @@
       Handelsregister: Berlin, HRB 144242 B<br />
       USt-IdNr.: DE282045007<br />
       CEO: Robert Reiz<br />
-    </address>
-
-    <address>
-      <strong>Shipping Address</strong><br/>
-      <br />
-      Rudolf-Breitscheid-Straße 187<br/>
-      14482 Potsdam<br/>
-      Germany<br/>
-      <br/>
     </address>
   </div>
 </div>
