--- a/app/views/products/helpers/_what_is_versioneye.html.erb
+++ b/app/views/products/helpers/_what_is_versioneye.html.erb
@@ -15,7 +15,7 @@
     <div class="row">
       <div class = "modal-body span7" style="text-align: left;">
         <a href="https://player.vimeo.com/video/72324479" target="versioneye_video" >
-          <%= image_tag("versioneye_video.png") %>
+          <%= image_tag("versioneye_video.jpg") %>
         </a>
       </div>
       <div class="modal-body span3 pull-right" style="text-align: left">
