--- a/app/views/products/helpers/_integration_points.html.erb
+++ b/app/views/products/helpers/_integration_points.html.erb
@@ -4,7 +4,7 @@
         <p class="marketing_exp">
           VersionEye makes it easy for you to stay up to date
           with your repositories. We feature an easy to use upload,
-          URL and GitHub integration.
+          URL, GitHub &amp; Bitbucket integration.
         </p>
       </div >
       <div class="span7 col2-right-r pull-right" >
