Fix ui test for selenium

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,7 +43,7 @@
             </li>
             <li class="divider-vertical"></li>
             <li>
-              <a href="JavaScript: load_dialog_feedback()" title="Feedback">
+              <a href="JavaScript: load_dialog_feedback()" title="Feedback" id="feedback">
                 <i class="icon-comment" ></i>
               </a>
             </li>
