--- a/app/views/admin/submitted_urls/_approval_form.html.erb
+++ b/app/views/admin/submitted_urls/_approval_form.html.erb
@@ -1,7 +1,7 @@
 <div id= "approval_form_<%= @form_index %>"class = "hide admin-form">
   <h5>Accept url </h5>
 
-  <%= form_tag(admin_submitted_url_approve_path(@submitted_url), 
+  <%= form_tag(admin_submitted_url_approve_path(@submitted_url),
                :class => 'form-horizontal') do %>
 
     <div class = "control-group">
@@ -27,12 +27,19 @@
     </div>
 
     <div class = "control-group">
+      <%= label_tag :force_fullname, nil, :class => "control-label" %>
       <div class = "controls">
-        
-        <button type = "button" class = "btn" 
+        <%= check_box_tag 'force_fullname', 'true', true, :class => "span4" %>
+      </div>
+    </div>
+
+    <div class = "control-group">
+      <div class = "controls">
+
+        <button type = "button" class = "btn"
           onclick="jQuery('.admin-form').addClass('hide')">
           Cancel</button>
-       <%= submit_tag "Accept", :class => "btn2" %> 
+       <%= submit_tag "Accept", :class => "btn2" %>
       </div>
     </div>
   <% end %>
