--- a/app/views/user/github_repos/init.html.erb
+++ b/app/views/user/github_repos/init.html.erb
@@ -47,291 +47,4 @@
 
 <% end %>
 
-<!-- templates for frontend app -->
-
-<script id = "github-no-repo-template" type = "text/template">
-  <div class = "notification">
-    <strong>No repositories!</strong>
-    <p>
-      Both You and yours organizations don`t have any Github repositories.
-    </p>
-  </div>
-</script>
-
-<script id = "github-pagination-template" type = "text/template">
-  <div class = "pagination pagination-centered l_left_padding ">
-    <button class = "btn btn-mini btn-warning btn-block btn-pagination-next"
-      data-current-page = "{{= paging.currentPage}}"
-      data-total-pages = "{{= paging.totalPages }}"
-      data-per-page = "{{= paging.perPage }}"
-      {{= (paging.currentPage  >= (paging.totalPages - 1)) ? " disabled " : ""}}>
-      Show more ({{= (paging.currentPage + 1)}}/{{= paging.totalPages}})
-    </button>
-  </div>
-</script>
-
-<script id = "github-loading-template" type = "text/template">
-  <div id = "github-loader">
-    <div class="{{= classes }}">
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
-      {{= message }}
-    </div>
-    <div>
-      <img src = "/assets/loadingbar2.gif" style = "position: relative; left: 40%;">
-    </div>
-  </div>
-</script>
-
-<script id = "github-notification-template" type = "text/template">
-  <div class="alert {{= classes }}">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    {{=  content }}
-  </div>
-</script>
-
-<script id = "github-repo-info-template" type = "text/template">
-  <div id = "github-repo-{{= repo.github_id}}"
-       class = "repo-container"
-       data-repo-id = "{{= repo.github_id }}"
-       data-repo-fullname = "{{= repo.fullname }}">
-    <div class = "repo-notification hide span12"></div>
-    <div id = "slide1" class = "repo-slider current" data-next="slide2">
-      <div class = "repo-info row-fluid">
-        <div class = "repo-info-content span12">
-          <div>
-            {{ var logo_path = "/assets/language/" }}
-            {{ var logo_name = (repo.supported) ? repo.language : "default" }}
-            <img  class = "pull-left" src = {{= logo_path + logo_name + ".png"}} style = " height: 72px; " />
-            <a href= "http://www.github.com/{{= repo.fullname}}" target="_blank">
-              <h5>{{= repo.fullname }}</h5>
-            </a>
-            <div class ="repo-labels"></div>
-          </div>
-          <div class = "span12 repo-desc"> {{= repo.description }} </div>
-          <div class = "span12 repo-project-info"></div>
-        </div>
-        <div class = "controls span12">
-          <button class = "btn btn-mini btn-link controls-toggle update-repo pull-left">
-              <i class = "icon-refresh"></i>
-              <span class = "btn-title"> Update the repository </span>
-          </button>
-          <button class = "btn btn-mini btn-link controls-toggle toggle-next pull-right">
-            <i class = "icon-caret-up"></i> Show project files
-          </button>
-        </div>
-      </div>
-    </div>
-    <div id = "slide2" class = "repo-slider" data-next="slide1">
-      <div class = "span12">
-        <div class = "repo-controls-container">
-          <div class = "repo-controls span12"></div>
-          <div class = "controls span12">
-            <button class = "btn btn-mini btn-link controls-toggle update-repo pull-left">
-              <i class = "icon-refresh"></i>
-              <span class = "btn-title"> Update the repository </span>
-            </button>
-            <button class = "btn btn-mini btn-link controls-toggle toggle-next pull-right">
-              <i class = "icon-caret-up"></i> Show project info
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</script>
-
-<script id = "github-repo-label-template" type = "text/template">
-  <span class="{{= classes }}">
-    {{= content }}
-  </span>
-</script>
-
-<script id = "github-repo-urllabel-template" type = "text/template">
-  <span class="">
-    <a href= "{{= url }}">
-      <span class = "{{= classes }}">{{= content }}</span>
-    </a>
-  </span>
-</script>
-
-<script id = "github-repo-project-info-template" type = "text/template">
-  <p>
-
-    {{ if (branches.length < 2) { }}
-      There is <strong>{{= branches.length }}</strong> branch in this repository.
-    {{  } else { }}
-      This repository has <strong> {{= branches.length }} </strong> branches.
-    {{  } }}
-  </p>
-  <p>
-    {{ if(imported_urls.length){ }}
-      We are monitoring {{= imported_urls.length }} files : {{= imported_urls.join(' , ') }}.
-    {{  } else { }}
-        We are monitoring <em>none</em> of them.
-    {{  } }}
-  </p>
-</script>
-
-<script id = "github-repo-control-item-template" type = "text/template">
-  <td class = "item-header span3">
-    <p>
-      <i class="icon-code-fork"></i>
-      {{= branch }}
-    </p>
-  </td>
-  <td class = "item-body span9"></td>
-</script>
-
-<script id = "github-repo-switch-template" type = "text/template">
-<div class = "row-fluid repo-control">
-  <div class = "span2 item-switch">
-    <div class="onoffswitch">
-      <input type="checkbox" name="{{= switch_id }}"
-              class="onoffswitch-checkbox github-switch"
-              id="{{= switch_id }}"
-              {{= is_imported ? ' checked ': '' }}
-              data-scm-id = "{{= repo.github_id }}"
-              data-scm-project-id = "{{= project_info['project_id'] }}"
-              data-scm-fullname = "{{= repo.fullname }}"
-              data-scm-branch = "{{= branch }}"
-              data-scm-filename = "{{= filename }}" />
-
-      <label class="onoffswitch-label" for="{{= switch_id }}">
-          <div class="onoffswitch-inner"></div>
-          <div class="onoffswitch-switch"></div>
-      </label>
-    </div>
-  </div>
-  <div class = "span10 item-title">
-    {{= switch_info }}
-  </div>
-</div>
-</script>
-
-
-<script id = "github-menu-item-template" type = "text/template">
-  <li class = "org-item">
-      <a href="#org/{{= org.name}}">
-        {{= org.name}} - {{= org.type}}
-      </a>
-  </li>
-</script>
-
-<script id = "github-menu-template" type = "text/template">
-  <ul class="nav nav-pills" style = "padding-bottom: 0px; margin-bottom: 0px;">
-    <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class = "icon-group">&nbsp;</i>Organizations
-        <b class="caret"></b>
-      </a>
-      <ul class="dropdown-menu" id = "github-menu-orgs">Loading...</ul>
-    </li>
-   <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class = "icon-sort-by-alphabet">&nbsp;</i>Sort by
-        <b class="caret"></b>
-      </a>
-      <ul id = "github-menu-sort" class="dropdown-menu">
-        <li class="sort-item">
-          <a href= "javascript:void(0)" data-field="language" data-order = "-1">
-            Language
-          </a>
-        </li>
-        <li class="sort-item">
-          <a href= "javascript:void(0)" data-field="updated_at" data-order= "-1">Updated</a>
-        </li>
-        <li class="sort-item">
-          <a href= "javascript:void(0)" data-field="private" data-order= "-1">Visibility</a>
-        </li>
-        <li class="sort-item">
-          <a href= "javascript:void(0)" data-field="cached_at" data-order= "-1">Imported</a>
-        </li>
-        <li class="sort-item">
-          <a href= "javascript:void(0)" data-field="name" data-order= "-1">Name</a>
-        </li>
-        <li class="sort-item">
-          <a href= "javascript:void(0)" data-field="supported" data-order= "-1">Supported</a>
-        </li>
-
-      </ul>
-    </li>
-   <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class = "icon-filter">&nbsp;</i>Filter by
-        <b class="caret"></b>
-      </a>
-      <ul class="dropdown-menu">
-         <li class="filter-item">
-          <a href= "javascript:void(0)" data-field="private" data-value="true">
-            <i class="icon-lock" style= "height: 20px; vertical-align: top;"></i>
-            Only private projects
-          </a>
-        </li>
-       <li class="filter-item">
-          <a href= "javascript:void(0)" data-field="language" data-value="coffeescript">
-            <img src="/assets/language/javascript.png" style= "height: 20px; vertical-align: top;">
-            CoffeeScript
-          </a>
-        </li>
-        <li class="filter-item">
-          <a href= "javascript:void(0)" data-field="language" data-value="clojure">
-            <img src="/assets/language/clojure.png" style= "height: 20px; vertical-align: top;">
-            Clojure
-          </a>
-        </li>
-        <li class="filter-item">
-          <a href= "javascript:void(0)" data-field="language" data-value="java">
-             <img src="/assets/language/java.png" style= "height: 20px; vertical-align: top;">
-             Java
-          </a>
-        </li>
-        <li class="filter-item">
-          <a href= "javascript:void(0)" data-field="language" data-value="javascript">
-            <img src="/assets/language/javascript.png" style= "height: 20px; vertical-align: top;">
-            Javascript
-          </a>
-        </li>
-        <li class="filter-item">
-          <a href= "javascript:void(0)" data-field="language" data-value="node.js">
-            <img src="/assets/language/node.js.png" style= "height: 20px; vertical-align: top;">
-            Node.js
-          </a>
-        </li>
-        <li class="filter-item">
-          <a href= "javascript:void(0)" data-field="language" data-value="php">
-            <img src="/assets/language/php.png" style= "height: 20px; vertical-align: top;">
-            PHP
-          </a>
-        </li>
-        <li class="filter-item">
-          <a href= "javascript:void(0)" data-field="language" data-value="python">
-             <img src="/assets/language/python.png" style= "height: 20px; vertical-align: top;">
-            Python
-          </a>
-        </li>
-        <li class="filter-item">
-          <a href= "javascript:void(0)" data-field="language" data-value="ruby">
-            <img src="/assets/language/ruby.png" style= "height: 20px; vertical-align: top;">
-            Ruby
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li >
-      <button id = "refresh-github-data" class = "btn btn-link">
-        <i class = "btn-icon icon-refresh">&nbsp;</i>
-        <span class = "btn-title">Reimport all repositories</span>
-      </button>
-    </li>
-    <li class = "dropdown">
-      <form class = "form" id = "github-repo-search">
-        <div class = "input-append">
-          <input type = "text" class = "span4 search-box" id = "github-search-term"
-            name = "github_search" placeholder = "filter by name">
-          <button class = "btn" id = "github-search-btn" type = "button"> <i class = "icon-search">&nbsp;</i> Filter</button>
-        </div>
-      </div>
-    </li>
-
-  </ul>
-</script>
+<%= render "shared/scm_app_templates" %>
