--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -38,3 +38,20 @@
 .l_margin_bottom_5{
   margin-bottom: 5px;
 }
+
+.l_padding_surround{
+  padding: 30px;
+}
+
+.l_padding_surround_small{
+  padding: 10px;
+}
+
+.l_padding_top{
+  padding-top: 15px;
+}
+
+.l_padding_vert_7{
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
