--- a/app/views/products/helpers/_support_for_packagemanagers.html.erb
+++ b/app/views/products/helpers/_support_for_packagemanagers.html.erb
@@ -1,72 +1,71 @@
 
-    <div class="row" >
-      <div class="span3 col2-left-l" >
-        <h4 class="no_margin"> VersionEye supports various package managers </h4>
-        <p class="marketing_exp">
-        VersionEye supports a wide range of package managers and
-        is continuously adding more into the service.
-        </p>
-      </div>
-      <div class="span7 col2-right-r pull-right" >
-        <h5 class="marketing"> We currently support: </h5>
-        <div class = "row-fluid">
+<div class="row" >
+  <div class="span10 l_padding_surround" >
 
-          <div class="span6 package_manager" style="margin-left: 0px;" >
-            <div class="pull-left package_managers_icon">
-              <a href="/java"><span class = "icon_java on"></span></a>
-            </div>
-            pom.xml files from Maven.
+    <h2 class="no_margin" > Package Managers </h2>
+
+    <div class="span7 col2-right-r pull-right" >
+
+      <div class = "row-fluid">
+
+        <div class="span6 package_manager" style="margin-left: 0px;" >
+          <div class="pull-left package_managers_icon">
+            <a href="/java"><span class = "icon_java on"></span></a>
           </div>
-
-          <div class = "span5 package_manager" style="margin-left: 0px;" >
-            <div class="pull-left package_managers_icon">
-              <a href="/Node.JS"><span class = "icon_nodejs on"></span></a>
-            </div>
-            package.json files from NPM.
-          </div>
-
-          <div class = "span6 package_manager" style="margin-left: 0px;">
-            <div class="pull-left package_managers_icon">
-              <a href="/Ruby"><span class = "icon_ruby on"></span></a>
-            </div>
-            Ruby Gemfiles from Bundler.
-          </div>
-
-          <div class = "span5 package_manager" style="margin-left: 0px;" >
-            <div class="pull-left package_managers_icon">
-              <a href="/javascript"><span class = "icon_javascript on"></span></a>
-            </div>
-            Bower.json files for JavaScript.
-          </div>
-
-          <div class = "span6 package_manager" style="margin-left: 0px;" >
-            <div class="pull-left package_managers_icon">
-              <a href="/python"><span class = "icon_python on"></span></a>
-            </div>
-            PIP requirement.txt and setup.py files.
-          </div>
-
-          <div class = "span5 package_manager" style="margin-left: 0px;" >
-            <div class="pull-left package_managers_icon">
-              <a href="/PHP"><span class = "icon_php on" ></span></a>
-            </div>
-            composer.json files from packagist.org.
-          </div>
-
-          <div class = "span6 package_manager" style="margin-left: 0px;" >
-            <div class="pull-left package_managers_icon">
-              <a href="/Ojbective-C"><span class = "icon_objective-c on"></span></a>
-            </div>
-            CocoaPods .podspec files for Objective-C, iPhone developers.
-          </div>
-
-          <div class = "span5 package_manager" style="margin-left: 0px;" >
-            <div class="pull-left package_managers_icon">
-              <a href="/Clojure"><span class = "icon_clojure on"></span></a>
-            </div>
-            Lein project.clj files for Clojure.
-          </div>
-
+          pom.xml files from Maven.
         </div>
+
+        <div class = "span5 package_manager" style="margin-left: 0px;" >
+          <div class="pull-left package_managers_icon">
+            <a href="/Node.JS"><span class = "icon_nodejs on"></span></a>
+          </div>
+          package.json files from NPM.
+        </div>
+
+        <div class = "span6 package_manager" style="margin-left: 0px;">
+          <div class="pull-left package_managers_icon">
+            <a href="/Ruby"><span class = "icon_ruby on"></span></a>
+          </div>
+          Ruby Gemfiles from Bundler.
+        </div>
+
+        <div class = "span5 package_manager" style="margin-left: 0px;" >
+          <div class="pull-left package_managers_icon">
+            <a href="/javascript"><span class = "icon_javascript on"></span></a>
+          </div>
+          Bower.json files for JavaScript.
+        </div>
+
+        <div class = "span6 package_manager" style="margin-left: 0px;" >
+          <div class="pull-left package_managers_icon">
+            <a href="/python"><span class = "icon_python on"></span></a>
+          </div>
+          PIP requirement.txt and setup.py files.
+        </div>
+
+        <div class = "span5 package_manager" style="margin-left: 0px;" >
+          <div class="pull-left package_managers_icon">
+            <a href="/PHP"><span class = "icon_php on" ></span></a>
+          </div>
+          composer.json files from packagist.org.
+        </div>
+
+        <div class = "span6 package_manager" style="margin-left: 0px;" >
+          <div class="pull-left package_managers_icon">
+            <a href="/Ojbective-C"><span class = "icon_objective-c on"></span></a>
+          </div>
+          CocoaPods .podspec files for Objective-C, iPhone developers.
+        </div>
+
+        <div class = "span5 package_manager" style="margin-left: 0px;" >
+          <div class="pull-left package_managers_icon">
+            <a href="/Clojure"><span class = "icon_clojure on"></span></a>
+          </div>
+          Lein project.clj files for Clojure.
+        </div>
+
       </div>
     </div>
+
+  </div>
+</div>
