--- a/app/views/products/helpers/_what_is_versioneye.html.erb
+++ b/app/views/products/helpers/_what_is_versioneye.html.erb
@@ -1,27 +1,11 @@
 
-    <div class="row" >
-      <div class="span6 col2-left" >
-        <h2 class="no_margin" > What is VersionEye </h2>
-        <p style = "font-size: 16px; padding-top: 30px;">
-          VersionEye helps to keep your software project up to date.
-          Let VersionEye monitor your repositories to get notified
-          about outdated dependencies in your software projects.
-        </p>
-      </div>
-      <div class="span4 col2-right pull-right" >
-        <span class = "logo_eye"> </span>
-      </div>
-    </div>
-    <div class="row">
-      <div class = "modal-body span7" style="text-align: left;">
-        <a href="https://player.vimeo.com/video/72324479" target="versioneye_video" >
-          <%= image_tag("versioneye_video.jpg") %>
-        </a>
-      </div>
-      <div class="modal-body span3 pull-right" style="text-align: left">
-        <br/>
-        <a href="https://vimeo.com/user10536437">More videos on Vimeo</a><br/>
-        <br/>
-        <a href="https://www.youtube.com/user/VersionEye/videos">More videos on YouTube</a><br/><br/>
-      </div>
-    </div>
+<div class="row" >
+  <div class="span10 l_padding_surround" >
+    <h2 class="no_margin" > What is VersionEye? </h2>
+    <p class="l_padding_top large_font">
+      VersionEye helps to keep your software project up to date.
+      Let VersionEye monitor your repositories to get notified
+      about outdated dependencies in your software projects.
+    </p>
+  </div>
+</div>
