--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -25,39 +25,21 @@
   </div>
 </div>
 
-<div id="packagemanagers" class="container">
-  <div class="well-white l_lp_well_margin" >
-    <%= render "/products/helpers/support_for_packagemanagers" %>
+<div id="reasons" class="container" >
+  <div class="well-white l_lp_well_margin">
+    <%= render "/products/helpers/why" %>
   </div>
 </div>
 
 <div id="integration" class="container">
   <div class="well-white l_lp_well_margin" >
-    <%= render "/products/helpers/integration_points" %>
+    <%= render "/products/helpers/how" %>
   </div>
 </div>
 
-<div id="api" class="container">
+<div id="packagemanagers" class="container">
   <div class="well-white l_lp_well_margin" >
-    <%= render "/products/helpers/api_and_addons" %>
-  </div>
-</div>
-
-
-<div id="reasons" class="container" >
-  <div class="well-white l_lp_well_margin">
-    <div class="marketing" >
-      <h2 class="casual">Because software libraries don't update themselves</h2>
-      <p>They just become out-dated!</p>
-    </div>
-    <div class="marketing" >
-      <h2 class="casual">Because software libraries are not like iPhone apps</h2>
-      <p>They are passive! They don't tell you that they are out-dated!</p>
-    </div>
-    <div class="marketing" >
-      <h2 class="casual">Because software developers are wasting time with ...</h2>
-      <p>looking manually for updates. Save time and money by automating this process.</p>
-    </div>
+    <%= render "/products/helpers/support_for_packagemanagers" %>
   </div>
 </div>
 
